--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
 <meta name="Keywords" content="halfbanana dev, halfbanana, fighting guys, casual games, android games, gamedev, game, iphone">
 <title>HalfBanana Dev</title>
+</head>
+<body>
 
+</body>
+</html>
