Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <header>
     <nav>
-        <a href="PrivacyPolicy.php">Privacy Policy</a>
+        <a href="PrivacyPolicy.html">Privacy Policy</a>
     </nav>
 </header>
 
